[gd_scene load_steps=8 format=3 uid="uid://66ccsnb7emg7"]

[ext_resource type="PackedScene" uid="uid://cgph5bneq3l1p" path="res://bonki_model/bonki.blend" id="1_dmfh7"]
[ext_resource type="Script" uid="uid://by255qhvas75h" path="res://bonki_model/bonki_model.gd" id="2_2xsow"]
[ext_resource type="Material" uid="uid://ckp2oqynh8bc2" path="res://bonki_model/materials/bonki_model_body_material.tres" id="3_lcqbr"]
[ext_resource type="Material" uid="uid://d0m46fntpstll" path="res://bonki_model/materials/bonki_eye_material.tres" id="4_hjk1a"]
[ext_resource type="Material" uid="uid://b1cjlp6ody7yq" path="res://bonki_model/materials/bonki_eye_shadow_material.tres" id="5_k57ku"]
[ext_resource type="Material" uid="uid://3myt3sfunf7t" path="res://bonki_model/materials/bonki_eye_shine_material.tres" id="6_41361"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://c522ts4uxsrk8" path="res://bonki_model_animation_blend_tree.tres" id="7_dmfh7"]

[node name="BonkiModel" instance=ExtResource("1_dmfh7")]
script = ExtResource("2_2xsow")

[node name="Skeleton3D" parent="Armature" index="1"]
bones/0/scale = Vector3(1.2300833, 1.0000088, 1)
bones/1/rotation = Quaternion(-1.7273737e-16, 1.7136806e-08, -0.09086231, 0.9958635)
bones/2/rotation = Quaternion(0.0010882784, 0.012030694, 0.102299474, 0.9946803)
bones/4/position = Vector3(0.23112628, 0.15221627, 0.12064531)
bones/4/rotation = Quaternion(-0.18755345, 0.72660214, 0.625136, 0.21465828)
bones/4/scale = Vector3(0.854, 1.0000001, 0.9999998)
bones/5/position = Vector3(-0.2311208, 0.14998291, 0.120645285)
bones/5/rotation = Quaternion(0.18419993, 0.7278634, 0.62354016, -0.21790612)
bones/5/scale = Vector3(0.8539999, 0.9999997, 0.99999994)

[node name="Body" parent="Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("3_lcqbr")

[node name="EyeBase_L" parent="Armature/Skeleton3D" index="1"]
surface_material_override/0 = ExtResource("4_hjk1a")

[node name="EyeBase_R" parent="Armature/Skeleton3D" index="2"]
surface_material_override/0 = ExtResource("4_hjk1a")

[node name="EyeShadow_L" parent="Armature/Skeleton3D" index="3"]
surface_material_override/0 = ExtResource("5_k57ku")

[node name="EyeShadow_R" parent="Armature/Skeleton3D" index="4"]
surface_material_override/0 = ExtResource("5_k57ku")

[node name="EyeShine_L" parent="Armature/Skeleton3D" index="5"]
surface_material_override/0 = ExtResource("6_41361")

[node name="EyeShine_R" parent="Armature/Skeleton3D" index="6"]
surface_material_override/0 = ExtResource("6_41361")

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = ExtResource("7_dmfh7")
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 0.0
parameters/AddStretchWide/add_amount = 1.46
parameters/AddEyesSpread/add_amount = -0.29
parameters/AddPearness/add_amount = 0.0

[node name="CrownAttachment" type="BoneAttachment3D" parent="." index="3"]
transform = Transform3D(1.2292514, -0.034180623, 0.029313182, 0.03037629, 0.99954885, -0.003905257, -0.02371076, 0.0046264487, 0.9997082, 0.010388356, 0.87478775, -0.012897331)
bone_name = "Horn"
bone_idx = 3
use_external_skeleton = true
external_skeleton = NodePath("../Armature/Skeleton3D")
